# shell

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md
components/: CMakeLists.txt  bubbleshellprivateplugin.cpp  bubbleshellprivateplugin.h  fullscreenoverlay.cpp  fullscreenoverlay.h  qmldir  startupnotifier.cpp  startupnotifier.h
components/qml/: StartupFeedback.qml
desktoptoolbox/: Messages.sh  metadata.desktop
desktoptoolbox/contents/ui/: DesktopConfigButtons.qml  ToolBoxRoot.qml
shell/: Messages.sh  metadata.desktop
shell/contents/: defaults  layout.js  loader.qml
shell/contents/applet/: AppletError.qml  CompactApplet.qml  DefaultCompactRepresentation.qml
shell/contents/configuration/: AppletConfiguration.qml  ConfigCategoryDelegate.qml  ConfigurationContainmentAppearance.qml  ContainmentConfiguration.qml
shell/contents/explorer/: AppletDelegate.qml  WidgetExplorer.qml
shell/contents/views/: Desktop.qml  Panel.qml
